fix(container) adds column and row gaps to three breakpoints

--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -15,13 +15,19 @@ $total-columns: 12;
 @for $i from 1 through $total-columns {
   .container__col--#{$i} {
     grid-auto-flow: row;
+    column-gap: 3rem;
+    row-gap: 3rem;
     grid-template-columns: repeat(#{$i}, 1fr);
 
     @media screen and (max-width: $breakpoint-tablet) {
-      grid-template-columns: repeat(#{calc(#{$i}/ 2)}, 1fr);
+      column-gap: 2rem;
+      row-gap: 2rem;
+      grid-template-columns: repeat(ceil($i/2), 1fr);
     }
 
     @media screen and (max-width: $breakpoint-mobile) {
+      column-gap: 1rem;
+      row-gap: 1rem;
       grid-template-columns: 1fr;
     }
   }
